# pybind_cuda

./: .gitignore  CMakeLists.txt  README.md  matrix.py
src/: CMakeLists.txt  kernel.cu  kernel.h  mylib.cpp
src2/: CMakeLists.txt  kernel.h
test/: matrix.py  test.py
